@@ -4,8 +4,8 @@
 $DESCRIPTION=Pure
 
 # Pure keywords.
-$KW_LIST(kwa)=infix infixl infixr prefix postfix nullary case else end extern
-if let of otherwise then using when with
+$KW_LIST(kwa)=infix infixl infixr prefix postfix nullary case def else end
+extern if let of otherwise then using when with
 
 # These aren't really keywords but we want them to stick out anyway.
 $KW_LIST(kwb)=catch throw
