@@ -33,7 +33,7 @@ syn region   pureString		start=+"+ skip=+\\"+ end=+"+
 
 " keywords
 syn keyword pureKeyword	infix infixl infixr prefix postfix nullary
-syn keyword pureKeyword	case else end extern if let of otherwise then
+syn keyword pureKeyword	case def else end extern if let of otherwise then
 syn keyword pureKeyword	using when with
 syn keyword pureSpecial catch throw
 syn keyword pureType bigint bool char short int long double
